k8s/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cis-ops
  labels:
    name: cis-ops
